--- a/exercicios/ex007/index.html
+++ b/exercicios/ex007/index.html
@@ -4,8 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Exemplo de Semantica</title>
-    <style> body {
-        background-color: rgb(95, 1, 184);        
+    <style> 
+    body {
+        background-color: rgb(12, 31, 85); 
+    }       
         </style>
 </head>
 <body>
