--- a/desafios/d014/tabela01.html
+++ b/desafios/d014/tabela01.html
@@ -31,10 +31,10 @@
     <table>
         <thead>
             <tr>
-                <th rowspan="2"  class="Color1">Área</th>
-                <th rowspan="2" class="Color1">Disciplinas</th>
-                <th colspan="2" class="Color1">Notas</th>
-                <th rowspan="2" class="Color1">Média</th>
+                <th rowspan="2" class="Color1" scope="col">Área</th>
+                <th rowspan="2" class="Color1" scope="col">Disciplinas</th>
+                <th colspan="2" class="Color1" scope="colgroup">Notas</th>
+                <th rowspan="2" class="Color1" scope="col">Média</th>
             </tr>
             <tr>
                 <th class="Color1">Nota 1</th>
@@ -43,8 +43,8 @@
         </thead>
         <tbody>
             <tr>
-                <th rowspan="4">Exatas</th>
-                <td>Matemáatica</td>
+                <th rowspan="4" scope="rowgroup">Exatas</th>
+                <td>Matemática</td>
                 <td>0.0</td>
                 <td>0.0</td>
                 <td>0.0</td>
@@ -68,11 +68,11 @@
                 <td>0.0</td>
             </tr>
             <tr>
-                <th colspan="4" style="text-align: left;" class="Color1">Média de Exatas</th>
+                <th colspan="4" style="text-align: left;" class="Color1" scope="row">Média de Exatas</th>
                 <td class="Color1">0.0</td>
             </tr>
             <tr>
-                <th rowspan="2">Humanas</th>
+                <th rowspan="2" scope="rowgroup">Humanas</th>
                 <td>História</td>
                 <td>0.0</td>
                 <td>0.0</td>
@@ -84,7 +84,7 @@
                 <td>0.0</td>
                 <td>0.0</td>
             </tr>
-            <th colspan="4" style="text-align: left;" class="Color1">Média de Humanas</th>
+            <th colspan="4" style="text-align: left;" class="Color1" scope="row">Média de Humanas</th>
             <td class="Color1">0.0</td>
         </tbody>
     </table>
