--- a/exercicios/ex023/tabela006.html
+++ b/exercicios/ex023/tabela006.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tabelas Responsivas</title>
+    <link rel="shortcut icon" href="pizza.ico.png" type="image/x-icon">
+
     <style>
         body {
             font-family: Arial, Helvetica, sans-serif;
