--- a/exercicios/ex024/iframe002.html
+++ b/exercicios/ex024/iframe002.html
@@ -23,7 +23,9 @@
     <h1>Teste com iframe</h1>
     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Porro eligendi ad, voluptatibus, excepturi magni odio enim accusamus quisquam quaerat ipsam reiciendis iste delectus tenetur illum accusantium blanditiis veritatis vel? Blanditiis! Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ad suscipit praesentium dicta laborum quos similique maiores magni consequuntur labore nulla. Fuga consequuntur similique repellat, deleniti sint vel aperiam ad sequi?</p>
 
-    <iframe src="pag001.html" frameborder="0" height="500" width="500"></iframe>
+    <iframe src="paginas-extras/pag001.html" frameborder="0" height="500" width="500">
+        <p>Infelizmente o seu navegador nao é compativel com isso!</p>
+    </iframe>
 
     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cumque consectetur ducimus quisquam pariatur quia? Nisi eos aut expedita repellat iste qui suscipit voluptatem, sint veritatis repellendus reprehenderit libero ipsa eum. Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates impedit ea sequi, quas quod repellat sunt rerum sint saepe voluptatum odio pariatur asperiores fugit perspiciatis magni a molestiae, perferendis itaque!</p>
 </body>
