--- a/exercicios/ex024/iframe003.html
+++ b/exercicios/ex024/iframe003.html
@@ -29,7 +29,7 @@
 
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit accusamus reiciendis unde, delectus, maxime laudantium reprehenderit voluptatum minima velit possimus, modi sunt quam quasi enim numquam similique nam eos atque? Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem voluptate accusantium molestias expedita id! Id nisi laboriosam placeat repudiandae velit odio corporis consectetur, vitae sequi dignissimos magnam reprehenderit, consequuntur quis.</p>
 
-    <iframe id="tela" name="frame" src="">
+    <iframe id="tela" name="frame" srcdoc="<h1> MENSAGEM DE TESTE </h1>">
         <p>Infelizmente seu navegador nao é compativelcom isso.</p>
     </iframe>
 
